--- a/CSsharp-Web-Project/appsettings.Development.json
+++ b/CSsharp-Web-Project/appsettings.Development.json
@@ -1,4 +1,18 @@
 {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=DESKTOP-MTDT14O;Database=Sh0op2024;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+  "Identity": {
+    "SignIn": {
+      "RequireConfirmedAccount": false
+    },
+    "Password": {
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequiredLength": 4
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
